updated css on greeting and news drawer

--- a/app/app/ClientApp/src/app/main/main.component.html
+++ b/app/app/ClientApp/src/app/main/main.component.html
@@ -20,10 +20,10 @@
 
           <div id="newsContent">
             <h5><a href="{{news.news_url}}" style="color:black;">{{news.title}} </a></h5>
-            <p style="color:black">{{news.source_name}}</p>
+            <p style="color:black;">{{news.source_name}}</p>
           </div>
        
-          <img  src="{{news.image_url}}" alt="/" height="100" width="100" />
+          <img style="float:right;" src="{{news.image_url}}" alt="/" height="100" width="100" />
           <mat-divider></mat-divider>
 
         </div>
