--- a/app/app/ClientApp/src/app/greeting/greeting.component.css
+++ b/app/app/ClientApp/src/app/greeting/greeting.component.css
@@ -19,6 +19,19 @@ ul {
 img {
   display: block;
   margin: auto;
-  height: 70%;
+  /*
+      height: 70%;
   width: 65%;
+
+  */ height: 70%;
+  width: 65%;
+}
+
+
+@media only screen and (min-width: 64.063em) {
+
+   img {
+    max-width: 55%;
+    max-height: 55%;
+  }
 }
